--- a/nextjs-file-upload-typescript/package.json
+++ b/nextjs-file-upload-typescript/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/formidable": "^2.0.5",
+    "axios": "^0.27.2",
+    "formidable": "v3",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
