nextjs-crud-todo-api-typescriptに名前変更

--- a/nextjs-crud-todo-api-typescript/package.json
+++ b/nextjs-crud-todo-api-typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-crud-todo-api",
+  "name": "nextjs-crud-todo-api-typescript",
   "version": "0.1.0",
   "private": true,
   "scripts": {
